# SodukuQT

./: CMakeLists.txt  finalscore.cpp  finalscore.h  finalscore.ui  gamedialog.cpp  gamedialog.h  gamedialog.ui  main.cpp  menuwindow.cpp  menuwindow.h  menuwindow.ui
